// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#FAFAF8",
          "flex": 1,
        }
      }
    >
      <RNCSafeAreaView
        edges={
          {
            "bottom": "additive",
            "left": "additive",
            "right": "additive",
            "top": "additive",
          }
        }
        style={
          [
            {
              "flex": 1,
            },
            {
              "backgroundColor": "#FAFAF8",
            },
          ]
        }
      >
        <RCTScrollView
          contentContainerStyle={
            [
              {
                "flexGrow": 1,
              },
              {
                "gap": 16,
                "padding": 24,
                "paddingBottom": 110,
              },
            ]
          }
          showsVerticalScrollIndicator={false}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginBottom": 2,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 10,
                      },
                      {
                        "minHeight": 28,
                      },
                    ]
                  }
                >
                  <RNSVGSvgView
                    accessibilityLabel="Expyrico"
                    align="xMidYMid"
                    bbHeight={28}
                    bbWidth={28}
                    focusable={false}
                    height={28}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "flex": 0,
                          "height": 28,
                          "width": 28,
                        },
                      ]
                    }
                    vbHeight={865}
                    vbWidth={865}
                    width={28}
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                        matrix={
                          [
                            1,
                            0,
                            0,
                            1,
                            0,
                            190,
                          ]
                        }
                      >
                        <RNSVGPath
                          d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                          fill={
                            {
                              "payload": 4283671941,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        />
                        <RNSVGPath
                          d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                          fill={
                            {
                              "payload": 4294090009,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        />
                        <RNSVGPath
                          d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                          fill={
                            {
                              "payload": 4291968547,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        />
                        <RNSVGPath
                          d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                          fill={
                            {
                              "payload": 4281019943,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        />
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
                <View>
                  <Text
                    style={
                      [
                        {
                          "fontSize": 20,
                          "fontWeight": "700",
                        },
                        {
                          "color": "#2C2C28",
                        },
                      ]
                    }
                  >
                    Your pantry
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "fontSize": 13,
                          "marginTop": 2,
                        },
                        {
                          "color": "#8C8C85",
                        },
                      ]
                    }
                  >
                    Use what needs you first.
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderWidth": 1,
                    "gap": 10,
                    "padding": 24,
                  },
                  {
                    "backgroundColor": "#D6F0E6",
                    "borderColor": "#F0F0ED",
                    "borderRadius": 22,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "height": 56,
                      "justifyContent": "center",
                      "width": 56,
                    },
                    {
                      "backgroundColor": "#D6F0E6",
                      "borderRadius": 16,
                    },
                  ]
                }
              />
              <Text
                style={
                  [
                    {
                      "fontSize": 11,
                      "fontWeight": "700",
                      "letterSpacing": 1.2,
                      "marginTop": 2,
                    },
                    {
                      "color": "#3A8F6F",
                    },
                  ]
                }
              >
                START FRESH
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 24,
                      "fontWeight": "700",
                    },
                    {
                      "color": "#2C2C28",
                    },
                  ]
                }
              >
                Start your pantry
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 20,
                      "maxWidth": 280,
                      "textAlign": "center",
                    },
                    {
                      "color": "#8C8C85",
                    },
                  ]
                }
              >
                Scan the first item on your shelf and we’ll help you use it on time.
              </Text>
              <View
                accessibilityLabel="Scan pantry items"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "height": 52,
                      "justifyContent": "center",
                      "minHeight": 52,
                      "paddingHorizontal": 24,
                      "paddingVertical": 0,
                    },
                    {
                      "backgroundColor": "#F5A623",
                      "borderRadius": 999,
                      "opacity": 1,
                    },
                    false,
                    false,
                    false,
                    false,
                    false,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 8,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "includeFontPadding": false,
                          "textAlign": "center",
                        },
                        {
                          "color": "#2C2C28",
                          "fontSize": 14,
                          "fontWeight": "700",
                          "lineHeight": 20,
                        },
                      ]
                    }
                  >
                    Scan an item
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </RNCSafeAreaView>
    </View>
  </View>
</View>
`;

exports[`home in expyricoDark snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#111512",
          "flex": 1,
        }
      }
    >
      <RNCSafeAreaView
        edges={
          {
            "bottom": "additive",
            "left": "additive",
            "right": "additive",
            "top": "additive",
          }
        }
        style={
          [
            {
              "flex": 1,
            },
            {
              "backgroundColor": "#111512",
            },
          ]
        }
      >
        <RCTScrollView
          contentContainerStyle={
            [
              {
                "flexGrow": 1,
              },
              {
                "gap": 16,
                "padding": 24,
                "paddingBottom": 110,
              },
            ]
          }
          showsVerticalScrollIndicator={false}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginBottom": 2,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 10,
                      },
                      {
                        "minHeight": 28,
                      },
                    ]
                  }
                >
                  <RNSVGSvgView
                    accessibilityLabel="Expyrico"
                    align="xMidYMid"
                    bbHeight={28}
                    bbWidth={28}
                    focusable={false}
                    height={28}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "flex": 0,
                          "height": 28,
                          "width": 28,
                        },
                      ]
                    }
                    vbHeight={865}
                    vbWidth={865}
                    width={28}
                  >
                    <RNSVGGroup
                      fill={
                        {
                          "payload": 4278190080,
                          "type": 0,
                        }
                      }
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                        matrix={
                          [
                            1,
                            0,
                            0,
                            1,
                            0,
                            190,
                          ]
                        }
                      >
                        <RNSVGPath
                          d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                          fill={
                            {
                              "payload": 4283671941,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        />
                        <RNSVGPath
                          d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                          fill={
                            {
                              "payload": 4294090009,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        />
                        <RNSVGPath
                          d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                          fill={
                            {
                              "payload": 4291968547,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        />
                        <RNSVGPath
                          d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                          fill={
                            {
                              "payload": 4294638328,
                              "type": 0,
                            }
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                        />
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
                <View>
                  <Text
                    style={
                      [
                        {
                          "fontSize": 20,
                          "fontWeight": "700",
                        },
                        {
                          "color": "#FAFAF8",
                        },
                      ]
                    }
                  >
                    Your pantry
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "fontSize": 13,
                          "marginTop": 2,
                        },
                        {
                          "color": "#B7BDB7",
                        },
                      ]
                    }
                  >
                    Use what needs you first.
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderWidth": 1,
                    "gap": 10,
                    "padding": 24,
                  },
                  {
                    "backgroundColor": "#1F342C",
                    "borderColor": "#2D3A34",
                    "borderRadius": 22,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "height": 56,
                      "justifyContent": "center",
                      "width": 56,
                    },
                    {
                      "backgroundColor": "#203B31",
                      "borderRadius": 16,
                    },
                  ]
                }
              />
              <Text
                style={
                  [
                    {
                      "fontSize": 11,
                      "fontWeight": "700",
                      "letterSpacing": 1.2,
                      "marginTop": 2,
                    },
                    {
                      "color": "#D6F0E6",
                    },
                  ]
                }
              >
                START FRESH
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 24,
                      "fontWeight": "700",
                    },
                    {
                      "color": "#FAFAF8",
                    },
                  ]
                }
              >
                Start your pantry
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 20,
                      "maxWidth": 280,
                      "textAlign": "center",
                    },
                    {
                      "color": "#B7BDB7",
                    },
                  ]
                }
              >
                Scan the first item on your shelf and we’ll help you use it on time.
              </Text>
              <View
                accessibilityLabel="Scan pantry items"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "height": 52,
                      "justifyContent": "center",
                      "minHeight": 52,
                      "paddingHorizontal": 24,
                      "paddingVertical": 0,
                    },
                    {
                      "backgroundColor": "#F5A623",
                      "borderRadius": 999,
                      "opacity": 1,
                    },
                    false,
                    false,
                    false,
                    false,
                    false,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 8,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      [
                        {
                          "includeFontPadding": false,
                          "textAlign": "center",
                        },
                        {
                          "color": "#2C2C28",
                          "fontSize": 14,
                          "fontWeight": "700",
                          "lineHeight": 20,
                        },
                      ]
                    }
                  >
                    Scan an item
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </RNCSafeAreaView>
    </View>
  </View>
</View>
`;
